vdpa: Read device configuration only if FEATURES_OK (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -9764,6 +9764,7 @@
 	patches.suse/vdpa-Provide-interface-to-read-driver-features.patch
 	patches.suse/vdpa-mlx5-Distribute-RX-virtqueues-in-RQT-object.patch
 	patches.suse/vdpa-Sync-calls-set-get-config-status-with-cf_mutex.patch
+	patches.suse/vdpa-Read-device-configuration-only-if-FEATURES_OK.patch
 	patches.suse/dmaengine-idxd-rework-descriptor-free-path-on-failur.patch
 	patches.suse/dmaengine-idxd-int-handle-management-refactoring.patch
 	patches.suse/dmaengine-idxd-move-interrupt-handle-assignment.patch
