--- a/series.conf
+++ b/series.conf
@@ -11348,6 +11348,7 @@
 	patches.suse/bnxt_en-Handle-async-event-when-the-PHC-is-updated-i.patch
 	patches.suse/dt-bindings-net-xgmac_mdio-Remove-unsupported-bus-fr.patch
 	patches.suse/ixgbe-Remove-useless-DMA-32-fallback-configuration.patch
+	patches.suse/ixgbevf-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/e1000e-Remove-useless-DMA-32-fallback-configuration.patch
 	patches.suse/ethtool-add-header-data-split-indication.patch
 	patches.suse/bnxt-report-header-data-split-state.patch
