net/mlx5e: Use bitmap field for profile features (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8891,6 +8891,7 @@
 	patches.suse/net-mlx5-Let-user-configure-event_eq_size-param-57ca7678.patch
 	patches.suse/net-mlx5-Let-user-configure-max_macs-generic-param.patch
 	patches.suse/net-mlx5-Remove-the-repeated-declaration.patch
+	patches.suse/net-mlx5e-Use-bitmap-field-for-profile-features.patch
 	patches.suse/mt76-mt7921-drop-offload_flags-overwritten.patch
 	patches.suse/mt76-mt7615-fix-possible-deadlock-while-mt7615_regis.patch
 	patches.suse/mt76-do-not-pass-the-received-frame-with-decryption-.patch
