mlxsw: spectrum: Use 'bitmap_zalloc()' when applicable (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -5804,6 +5804,7 @@
 	patches.suse/gve-Add-a-jumbo-frame-device-option.patch
 	patches.suse/mt76-mt7615-mt7622-fix-ibss-and-meshpoint.patch
 	patches.suse/usbb-catc-use-correct-API-for-MAC-addresses.patch
+	patches.suse/mlxsw-spectrum-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/fddi-defza-add-missing-pointer-type-cast.patch
 	patches.suse/bluetooth-use-eth_hw_addr_set.patch
 	patches.suse/bluetooth-use-dev_addr_set.patch
