--- a/series.conf
+++ b/series.conf
@@ -8701,6 +8701,7 @@
 	patches.suse/mlx5-fix-psample_sample_packet-link-error.patch
 	patches.suse/mlx5-fix-mlx5i_grp_sw_update_stats-stack-usage.patch
 	patches.suse/net-mlx5-Fix-error-return-code-in-esw_qos_create.patch
+	patches.suse/net-mlx5-SF-silence-an-uninitialized-variable-warnin.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
