net/mlx5e: Hide function mlx5e_num_channels_changed (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8704,6 +8704,7 @@
 	patches.suse/net-mlx5-SF-silence-an-uninitialized-variable-warnin.patch
 	patches.suse/net-mlx5-Print-more-info-on-pci-error-handlers.patch
 	patches.suse/net-mlx5e-SHAMPO-clean-MLX5E_MAX_KLM_PER_WQE-macro.patch
+	patches.suse/net-mlx5e-Hide-function-mlx5e_num_channels_changed.patch
 	patches.suse/qed-enhance-tx-timeout-debug-info.patch
 	patches.suse/qed-esl-priv-flag-support-through-ethtool.patch
 	patches.suse/lib-add-reference-counting-tracking-infrastructure.patch
