--- a/series.conf
+++ b/series.conf
@@ -5826,6 +5826,7 @@
 	patches.suse/net-mlx5-SF-Add-SF-trace-points.patch
 	patches.suse/net-mlx5-SF_DEV-Add-SF-device-trace-points.patch
 	patches.suse/vrf-run-conntrack-only-in-context-of-lower-physdev-f.patch
+	patches.suse/mlxsw-reg-Add-MAC-profile-ID-field-to-RITR-register.patch
 	patches.suse/net-annotate-data-race-in-neigh_output.patch
 	patches.suse/msft-hv-2459-net-mana-Allow-setting-the-number-of-queues-while-th.patch
 	patches.suse/ifb-Depend-on-netfilter-alternatively-to-tc.patch
