--- a/series.conf
+++ b/series.conf
@@ -741,6 +741,7 @@
 	patches.suse/skbuff-allow-slow_gro-for-skb-carring-sock-reference.patch
 	patches.suse/qed-Remove-the-qed-module-version.patch
 	patches.suse/qede-Remove-the-qede-module-version.patch
+	patches.suse/net-sched-store-the-last-executed-chain-also-for-cls.patch
 	patches.suse/sk_buff-avoid-potentially-clearing-slow_gro-field.patch
 	patches.suse/devlink-Break-parameter-notification-sequence-to-be-.patch
 	patches.suse/devlink-Allocate-devlink-directly-in-requested-net-n.patch
