--- a/series.conf
+++ b/series.conf
@@ -9473,6 +9473,7 @@
 	patches.suse/RDMA-mlx5-Use-memset_after-to-zero-struct-mlx5_ib_mr.patch
 	patches.suse/iw_cxgb4-Use-memset_startat-for-cpl_t5_pass_accept_r.patch
 	patches.suse/RDMA-rxe-Fix-a-typo-in-opcode-name.patch
+	patches.suse/RDMA-mlx5-Print-wc-status-on-CQE-error-and-dump-need.patch
 	patches.suse/RDMA-mad-Delete-duplicated-init_query_mad-functions.patch
 	patches.suse/RDMA-cxgb4-Set-queue-pair-state-when-being-queried.patch
 	patches.suse/IB-mlx5-Expose-NDR-speed-through-MAD.patch
