ixgbevf: Mailbox improvements (jsc#PED-373).

--- a/series.conf
+++ b/series.conf
@@ -8639,6 +8639,7 @@
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/ixgbevf-Improve-error-handling-in-mailbox.patch
 	patches.suse/ixgbevf-Add-legacy-suffix-to-old-API-mailbox-functio.patch
+	patches.suse/ixgbevf-Mailbox-improvements.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
