net/mlx5e: TC, Move comment about mod header flag to correct place (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8617,6 +8617,7 @@
 	patches.suse/net-mlx5-TC-using-swap-instead-of-tmp-variable.patch
 	patches.suse/net-mlx5e-TC-Destroy-nic-flow-counter-if-exists.patch
 	patches.suse/net-mlx5e-TC-Move-kfree-calls-after-destroying-all-r.patch
+	patches.suse/net-mlx5e-TC-Move-comment-about-mod-header-flag-to-c.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
