net: sched: save full flags for tc action (jsc#PED-1549).

--- a/series.conf
+++ b/series.conf
@@ -8869,6 +8869,7 @@
 	patches.suse/flow_offload-allow-user-to-offload-tc-action-to-net-.patch
 	patches.suse/flow_offload-add-skip_hw-and-skip_sw-to-control-if-o.patch
 	patches.suse/flow_offload-add-process-to-update-action-stats-from.patch
+	patches.suse/net-sched-save-full-flags-for-tc-action.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
 	patches.suse/ieee80211-change-HE-nominal-packet-padding-value-def.patch
