--- a/series.conf
+++ b/series.conf
@@ -11396,6 +11396,7 @@
 	patches.suse/net-dsa-mv88e6xxx-Enable-port-policy-support-on-6097.patch
 	patches.suse/i40e-Disable-hw-tc-offload-feature-on-driver-load.patch
 	patches.suse/i40e-Remove-unused-RX-realloc-stat.patch
+	patches.suse/i40e-Add-sending-commands-in-atomic-context.patch
 	patches.suse/msft-hv-2523-net-mana-Add-handling-of-CQE_RX_TRUNCATED.patch
 	patches.suse/msft-hv-2524-net-mana-Remove-unnecessary-check-of-cqe_type-in-man.patch
 	patches.suse/bnx2x-Replace-one-element-array-with-flexible-array-.patch
