--- a/series.conf
+++ b/series.conf
@@ -11491,6 +11491,7 @@
 	patches.suse/mlx5-remove-unused-static-inlines.patch
 	patches.suse/net-mlx5-Add-ability-to-insert-to-specific-flow-grou.patch
 	patches.suse/net-mlx5-E-Switch-reserve-and-use-same-uplink-metada.patch
+	patches.suse/net-mlx5-E-switch-remove-special-uplink-ingress-ACL-.patch
 	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/sfc-set-affinity-hints-in-local-NUMA-node-only.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
