--- a/series.conf
+++ b/series.conf
@@ -3364,6 +3364,7 @@
 	patches.suse/vdpa-mlx5-function-prototype-modifications-in-prepar.patch
 	patches.suse/vdpa-mlx5-Decouple-virtqueue-callback-from-struct-ml.patch
 	patches.suse/vdpa-mlx5-Ensure-valid-indices-are-provided.patch
+	patches.suse/vdpa-mlx5-Add-support-for-control-VQ-and-MAC-setting.patch
 	patches.suse/virtio-blk-remove-unneeded-likely-statements.patch
 	patches.suse/iova-Export-alloc_iova_fast-and-free_iova_fast.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
