--- a/series.conf
+++ b/series.conf
@@ -3378,6 +3378,7 @@
 	patches.suse/vdpa-factor-out-vhost_vdpa_pa_map-and-vhost_vdpa_pa_.patch
 	patches.suse/vdpa-Support-transferring-virtual-addressing-during-.patch
 	patches.suse/vduse-Implement-an-MMU-based-software-IOTLB.patch
+	patches.suse/vduse-Introduce-VDUSE-vDPA-Device-in-Userspace.patch
 	patches.suse/cifs-update-FSCTL-definitions.patch
 	patches.suse/cifs-rename-cifs_common-to-smbfs_common.patch
 	patches.suse/cifs-move-SMB-FSCTL-definitions-to-common-code.patch
