--- a/series.conf
+++ b/series.conf
@@ -5222,6 +5222,7 @@
 	patches.suse/mlxsw-spectrum-Bump-minimum-FW-version-to-xx.2008.33.patch
 	patches.suse/mlxsw-spectrum-Move-port-module-mapping-before-core-.patch
 	patches.suse/mlxsw-spectrum-Move-port-SWID-set-before-core-port-i.patch
+	patches.suse/mlxsw-reg-Add-Port-Local-port-to-Label-Port-mapping-.patch
 	patches.suse/mlxsw-reg-Add-Port-Module-To-local-DataBase-Register.patch
 	patches.suse/mlxsw-spectrum-Use-PMTDB-register-to-obtain-split-in.patch
 	patches.suse/net-smc-add-support-for-user-defined-EIDs
