- mlxsw: spectrum: Use PLLP to get front panel number and split   number (jsc#PED-1549). - Refresh   patches.suse/mlxsw-spectrum-Use-PMTDB-register-to-obtain-split-in.patch.

--- a/series.conf
+++ b/series.conf
@@ -5223,6 +5223,7 @@
 	patches.suse/mlxsw-spectrum-Move-port-module-mapping-before-core-.patch
 	patches.suse/mlxsw-spectrum-Move-port-SWID-set-before-core-port-i.patch
 	patches.suse/mlxsw-reg-Add-Port-Local-port-to-Label-Port-mapping-.patch
+	patches.suse/mlxsw-spectrum-Use-PLLP-to-get-front-panel-number-an.patch
 	patches.suse/mlxsw-reg-Add-Port-Module-To-local-DataBase-Register.patch
 	patches.suse/mlxsw-spectrum-Use-PMTDB-register-to-obtain-split-in.patch
 	patches.suse/net-smc-add-support-for-user-defined-EIDs
