--- a/series.conf
+++ b/series.conf
@@ -8857,6 +8857,7 @@
 	patches.suse/ath11k-Fix-deleting-uninitialized-kernel-timer-durin.patch
 	patches.suse/ath11k-Fix-a-NULL-pointer-dereference-in-ath11k_mac_.patch
 	patches.suse/virtchnl-Add-support-for-new-VLAN-capabilities.patch
+	patches.suse/iavf-Add-support-for-VIRTCHNL_VF_OFFLOAD_VLAN_V2-neg.patch
 	patches.suse/flow_offload-reject-to-offload-tc-actions-in-offload.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
