- iavf: Add support for VIRTCHNL_VF_OFFLOAD_VLAN_V2 hotpath   (jsc#PED-835). - Refresh   patches.suse/iavf-Fix-locking-for-VIRTCHNL_OP_GET_OFFLOAD_VLAN_V2.patch.

--- a/series.conf
+++ b/series.conf
@@ -8859,6 +8859,7 @@
 	patches.suse/virtchnl-Add-support-for-new-VLAN-capabilities.patch
 	patches.suse/iavf-Add-support-for-VIRTCHNL_VF_OFFLOAD_VLAN_V2-neg.patch
 	patches.suse/iavf-Add-support-VIRTCHNL_VF_OFFLOAD_VLAN_V2-during-.patch
+	patches.suse/iavf-Add-support-for-VIRTCHNL_VF_OFFLOAD_VLAN_V2-hot.patch
 	patches.suse/flow_offload-reject-to-offload-tc-actions-in-offload.patch
 	patches.suse/bnx2x-Utilize-firmware-7.13.21.0.patch
 	patches.suse/bnx2x-Invalidate-fastpath-HSI-version-for-VFs.patch
