--- a/series.conf
+++ b/series.conf
@@ -9055,6 +9055,7 @@
 	patches.suse/net-mlx5e-TC-Remove-redundant-error-logging.patch
 	patches.suse/net-mlx5e-Add-recovery-flow-in-case-of-error-CQE.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
+	patches.suse/i40e-Add-ensurance-of-MacVlan-resources-for-every-tr.patch
 	patches.suse/net-mscc-ocelot-fix-incorrect-balancing-with-down-LA.patch
 	patches.suse/can-mcp251xfd-mcp251xfd_tef_obj_read-fix-typo-in-err.patch
 	patches.suse/can-mcp251xfd-add-missing-newline-to-printed-strings.patch
