--- a/series.conf
+++ b/series.conf
@@ -11312,6 +11312,7 @@
 	patches.suse/msft-hv-2551-x86-hyperv-Output-host-build-info-as-normal-Windows-.patch
 	patches.suse/PCI-IOV-Add-pci_iov_vf_id-to-get-VF-index.patch
 	patches.suse/net-mlx5-Reuse-exported-virtfn-index-function-call.patch
+	patches.suse/net-mlx5-Disable-SRIOV-before-PF-removal.patch
 	patches.suse/bpf-Fix-UAF-due-to-race-between-btf_try_get_module-a.patch
 	patches.suse/net-skbuff-add-size-metadata-to-skb_shared_info-for-.patch
 	patches.suse/xdp-introduce-flags-field-in-xdp_buff-xdp_frame.patch
