- ixgbe: pass bi->xdp to ixgbe_construct_skb_zc() directly   (jsc#PED-373). - Refresh   patches.suse/ixgbe-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on.patch. - Refresh   patches.suse/ixgbe-respect-metadata-on-XSK-Rx-to-skb.patch.

--- a/series.conf
+++ b/series.conf
@@ -11389,6 +11389,7 @@
 	patches.suse/ice-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on-X.patch
 	patches.suse/ice-respect-metadata-on-XSK-Rx-to-skb.patch
 	patches.suse/igc-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on-X.patch
+	patches.suse/ixgbe-pass-bi-xdp-to-ixgbe_construct_skb_zc-directly.patch
 	patches.suse/ixgbe-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on.patch
 	patches.suse/ixgbe-respect-metadata-on-XSK-Rx-to-skb.patch
 	patches.suse/sfc-The-size-of-the-RX-recycle-ring-should-be-more-f.patch
