livepatch: Create and include UAPI headers (bsc#1218644).

--- a/series.conf
+++ b/series.conf
@@ -17187,6 +17187,9 @@
 	patches.suse/Revert-Revert-kbuild-use-flive-patching-when-CONFIG_LIVEPATCH-is-enabled.patch
 	patches.suse/Revert-kallsyms-unexport-kallsyms_lookup_name-and-kallsyms_on_each_symbol.patch
 
+	# klp-convert
+	patches.suse/livepatch-Create-and-include-UAPI-headers.patch
+
 	########################################################
 	# SUSE kABI padding
 	########################################################
