livepatch: Add klp-convert tool (bsc#1218644).

--- a/series.conf
+++ b/series.conf
@@ -17189,6 +17189,7 @@
 
 	# klp-convert
 	patches.suse/livepatch-Create-and-include-UAPI-headers.patch
+	patches.suse/livepatch-Add-klp-convert-tool.patch
 
 	########################################################
 	# SUSE kABI padding
