--- a/series.conf
+++ b/series.conf
@@ -17190,6 +17190,7 @@
 	# klp-convert
 	patches.suse/livepatch-Create-and-include-UAPI-headers.patch
 	patches.suse/livepatch-Add-klp-convert-tool.patch
+	patches.suse/kbuild-modpost-integrate-klp-convert.patch
 
 	########################################################
 	# SUSE kABI padding
