--- a/series.conf
+++ b/series.conf
@@ -16913,6 +16913,7 @@
 	patches.suse/paddings-for-ath-802.11.patch
 	patches.suse/paddings-for-the-inter-DMN-tunnel-stuff-of-TB.patch
 	patches.suse/selftests-bpf-user_ringbuf-define-c_ringbuf_size.patch
+	patches.suse/tracing-Add-kabi-placeholders.patch
 
 	########################################################
 	# kABI consistency patches
