iommu/amd: Improving Interrupt Remapping Table Invalidation (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4042,6 +4042,7 @@
 	patches.suse/iommu-amd-Remove-the-unused-struct-amd_ir_data.ref
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommu-amd-Do-not-Invalidate-IRT-when-IRTE-caching-is-disabled
+	patches.suse/iommu-amd-Improving-Interrupt-Remapping-Table-Invalidation
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
 	patches.suse/RDMA-rxe-Add-workqueue-support-for-rxe-tasks.patch
