--- a/series.conf
+++ b/series.conf
@@ -4019,6 +4019,7 @@
 	patches.suse/iommu-Add-a-capability-for-flush-queue-support
 	patches.suse/iommu-Use-flush-queue-capability
 	patches.suse/iommu-Suppress-empty-whitespaces-in-prints
+	patches.suse/iommu-Replace-iommu_group_device_count-with-list_count_nodes
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
