--- a/series.conf
+++ b/series.conf
@@ -4018,6 +4018,7 @@
 	patches.suse/iommu-iova-Optimize-iova_magazine_alloc
 	patches.suse/iommu-Add-a-capability-for-flush-queue-support
 	patches.suse/iommu-Use-flush-queue-capability
+	patches.suse/iommu-Suppress-empty-whitespaces-in-prints
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
