dt-bindings: iommu: arm,smmu: enable clocks for sa8775p Adreno SMMU (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4003,6 +4003,7 @@
 	patches.suse/iommu-arm-smmu-v3-Document-nesting-related-err.patch
 	patches.suse/iommu-arm-smmu-v3-Set-TTL-invalidation-hint-better
 	patches.suse/dt-bindings-arm-smmu-Fix-SC8280XP-Adreno-bindin.patch
+	patches.suse/dt-bindings-iommu-arm-smmu-enable-clocks-for-sa8775p-Adreno-SMMU
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
