--- a/series.conf
+++ b/series.conf
@@ -4041,6 +4041,7 @@
 	patches.suse/iommu-amd-Switch-amd_iommu_update_ga-to-use-modify_irte_ga
 	patches.suse/iommu-amd-Remove-the-unused-struct-amd_ir_data.ref
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
+	patches.suse/iommu-amd-Do-not-Invalidate-IRT-when-IRTE-caching-is-disabled
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
 	patches.suse/RDMA-rxe-Add-workqueue-support-for-rxe-tasks.patch
