--- a/series.conf
+++ b/series.conf
@@ -4032,6 +4032,7 @@
 	patches.suse/iommu-Remove-the-assignment-of-group-domain-during-default-domai
 	patches.suse/iommu-Consolidate-the-code-to-calculate-the-target-default-domai
 	patches.suse/iommu-Revise-iommu_group_alloc_default_domain
+	patches.suse/iommu-Consolidate-the-default_domain-setup-to-one-function
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
