iommu: Use __iommu_group_set_domain() for __iommu_attach_group() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4022,6 +4022,7 @@
 	patches.suse/iommu-Replace-iommu_group_device_count-with-list_count_nodes
 	patches.suse/iommu-Add-for_each_group_device
 	patches.suse/iommu-Make-__iommu_group_set_domain-handle-error-unwind
+	patches.suse/iommu-Use-__iommu_group_set_domain-for-__iommu_attach_group
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
