iommu/fsl: Use driver_managed_dma to allow VFIO to work (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4008,6 +4008,7 @@
 	patches.suse/dt-bindings-arm-smmu-Add-SDX75-SMMU-compatible
 	patches.suse/iommu-fsl-Always-allocate-a-group-for-non-pci-devices
 	patches.suse/iommu-fsl-Move-ENODEV-to-fsl_pamu_probe_device
+	patches.suse/iommu-fsl-Use-driver_managed_dma-to-allow-VFIO-to-work
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
