iommu/amd: Use BIT/BIT_ULL macro to define bit fields (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4045,6 +4045,7 @@
 	patches.suse/iommu-amd-Improving-Interrupt-Remapping-Table-Invalidation
 	patches.suse/iommu-amd-Fix-compile-error-for-unused-function
 	patches.suse/iommu-amd-Fix-DTE_IRQ_PHYS_ADDR_MASK-macro
+	patches.suse/iommu-amd-Use-BIT-BIT_ULL-macro-to-define-bit-fields
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
 	patches.suse/RDMA-rxe-Add-workqueue-support-for-rxe-tasks.patch
