iommu/amd: Update copyright notice (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4037,6 +4037,7 @@
 	patches.suse/iommu-Remove-__iommu_group_for_each_dev
 	patches.suse/iommu-Tidy-the-control-flow-in-iommu_group_store_type
 	patches.suse/iommu-amd-Use-page-mode-macros-in-fetch_pte
+	patches.suse/iommu-amd-Update-copyright-notice
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
