iommu: Do iommu_group_create_direct_mappings() before attach (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4028,6 +4028,7 @@
 	patches.suse/iommu-Remove-iommu_group_do_dma_first_attach-from-iommu_group_ad
 	patches.suse/iommu-Replace-iommu_group_do_dma_first_attach-with-__iommu_devic
 	patches.suse/iommu-Fix-iommu_probe_device-to-attach-the-right-domain
+	patches.suse/iommu-Do-iommu_group_create_direct_mappings-before-attach
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
