iommu/arm-smmu-v3: Set TTL invalidation hint better (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4001,6 +4001,7 @@
 	patches.suse/iommu-arm-smmu-v3-Document-MMU-700-erratum-281.patch
 	patches.suse/iommu-arm-smmu-v3-Add-explicit-feature-for-nes.patch
 	patches.suse/iommu-arm-smmu-v3-Document-nesting-related-err.patch
+	patches.suse/iommu-arm-smmu-v3-Set-TTL-invalidation-hint-better
 	patches.suse/dt-bindings-arm-smmu-Fix-SC8280XP-Adreno-bindin.patch
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
