--- a/series.conf
+++ b/series.conf
@@ -4007,6 +4007,7 @@
 	patches.suse/dt-bindings-arm-smmu-Add-SM6375-GPU-SMMU
 	patches.suse/dt-bindings-arm-smmu-Add-SDX75-SMMU-compatible
 	patches.suse/iommu-fsl-Always-allocate-a-group-for-non-pci-devices
+	patches.suse/iommu-fsl-Move-ENODEV-to-fsl_pamu_probe_device
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
