--- a/series.conf
+++ b/series.conf
@@ -4016,6 +4016,7 @@
 	patches.suse/iommu-vt-d-Remove-two-WARN_ON-in-domain_context_mapping_one
 	patches.suse/iommu-vt-d-Remove-commented-out-code
 	patches.suse/iommu-iova-Optimize-iova_magazine_alloc
+	patches.suse/iommu-Add-a-capability-for-flush-queue-support
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
