iommu/vt-d: Handle the failure case of dmar_reenable_qi() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4012,6 +4012,7 @@
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
 	patches.suse/iommu-vt-d-Remove-unnecessary-void-conversions
+	patches.suse/iommu-vt-d-Handle-the-failure-case-of-dmar_reenable_qi
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
