iommu: Use __iommu_group_set_domain() in iommu_change_dev_def_domain() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4023,6 +4023,7 @@
 	patches.suse/iommu-Add-for_each_group_device
 	patches.suse/iommu-Make-__iommu_group_set_domain-handle-error-unwind
 	patches.suse/iommu-Use-__iommu_group_set_domain-for-__iommu_attach_group
+	patches.suse/iommu-Use-__iommu_group_set_domain-in-iommu_change_dev_def_domai
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
