--- a/series.conf
+++ b/series.conf
@@ -4046,6 +4046,7 @@
 	patches.suse/iommu-amd-Fix-compile-error-for-unused-function
 	patches.suse/iommu-amd-Fix-DTE_IRQ_PHYS_ADDR_MASK-macro
 	patches.suse/iommu-amd-Use-BIT-BIT_ULL-macro-to-define-bit-fields
+	patches.suse/iommu-amd-Remove-extern-from-function-prototypes
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
 	patches.suse/RDMA-rxe-Add-workqueue-support-for-rxe-tasks.patch
