--- a/series.conf
+++ b/series.conf
@@ -4011,6 +4011,7 @@
 	patches.suse/iommu-fsl-Use-driver_managed_dma-to-allow-VFIO-to-work
 	patches.suse/iommu-virtio-Detach-domain-on-endpoint-release.patch
 	patches.suse/iommu-virtio-Return-size-mapped-for-a-detached-.patch
+	patches.suse/iommu-vt-d-Remove-unnecessary-void-conversions
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
