iommu: Tidy the control flow in iommu_group_store_type() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4035,6 +4035,7 @@
 	patches.suse/iommu-Consolidate-the-default_domain-setup-to-one-function
 	patches.suse/iommu-Allow-IOMMU_RESV_DIRECT-to-work-on-ARM
 	patches.suse/iommu-Remove-__iommu_group_for_each_dev
+	patches.suse/iommu-Tidy-the-control-flow-in-iommu_group_store_type
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
