iommu: Allow IOMMU_RESV_DIRECT to work on ARM (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4033,6 +4033,7 @@
 	patches.suse/iommu-Consolidate-the-code-to-calculate-the-target-default-domai
 	patches.suse/iommu-Revise-iommu_group_alloc_default_domain
 	patches.suse/iommu-Consolidate-the-default_domain-setup-to-one-function
+	patches.suse/iommu-Allow-IOMMU_RESV_DIRECT-to-work-on-ARM
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
