--- a/series.conf
+++ b/series.conf
@@ -4021,6 +4021,7 @@
 	patches.suse/iommu-Suppress-empty-whitespaces-in-prints
 	patches.suse/iommu-Replace-iommu_group_device_count-with-list_count_nodes
 	patches.suse/iommu-Add-for_each_group_device
+	patches.suse/iommu-Make-__iommu_group_set_domain-handle-error-unwind
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
