iommu/vt-d: Remove commented-out code (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4014,6 +4014,7 @@
 	patches.suse/iommu-vt-d-Remove-unnecessary-void-conversions
 	patches.suse/iommu-vt-d-Handle-the-failure-case-of-dmar_reenable_qi
 	patches.suse/iommu-vt-d-Remove-two-WARN_ON-in-domain_context_mapping_one
+	patches.suse/iommu-vt-d-Remove-commented-out-code
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
