iommu/amd: Switch amd_iommu_update_ga() to use modify_irte_ga() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4038,6 +4038,7 @@
 	patches.suse/iommu-Tidy-the-control-flow-in-iommu_group_store_type
 	patches.suse/iommu-amd-Use-page-mode-macros-in-fetch_pte
 	patches.suse/iommu-amd-Update-copyright-notice
+	patches.suse/iommu-amd-Switch-amd_iommu_update_ga-to-use-modify_irte_ga
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
