--- a/series.conf
+++ b/series.conf
@@ -4027,6 +4027,7 @@
 	patches.suse/iommu-Replace-__iommu_group_dma_first_attach-with-set_domain
 	patches.suse/iommu-Remove-iommu_group_do_dma_first_attach-from-iommu_group_ad
 	patches.suse/iommu-Replace-iommu_group_do_dma_first_attach-with-__iommu_devic
+	patches.suse/iommu-Fix-iommu_probe_device-to-attach-the-right-domain
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
