iommu: Consolidate the code to calculate the target default domain type (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4030,6 +4030,7 @@
 	patches.suse/iommu-Fix-iommu_probe_device-to-attach-the-right-domain
 	patches.suse/iommu-Do-iommu_group_create_direct_mappings-before-attach
 	patches.suse/iommu-Remove-the-assignment-of-group-domain-during-default-domai
+	patches.suse/iommu-Consolidate-the-code-to-calculate-the-target-default-domai
 	patches.suse/iommu-amd-Introduce-Disable-IRTE-Caching-Suppo.patch
 	patches.suse/iommufd-Do-not-access-the-area-pointer-after-un.patch
 	patches.suse/iommufd-Call-iopt_area_contig_done-under-the-lo.patch
