--- a/series.conf
+++ b/series.conf
@@ -5671,6 +5671,7 @@
 	patches.suse/scsi-block-virtio_blk-Set-zone-limits-before-revalidating-zones.patch
 	patches.suse/msft-hv-2832-scsi-storvsc-Handle-SRB-status-value-0x30.patch
 	patches.suse/x86-fineibt-poison-endbr-at-0.patch
+	patches.suse/iommu-Fix-crash-during-syfs-iommu_groups-N-type
 	patches.suse/iommu-sva-Fix-signedness-bug-in-iommu_sva_alloc.patch
 	patches.suse/regmap-irq-Fix-out-of-bounds-access-when-alloca.patch
 	patches.suse/spi-bcm63xx-fix-max-prepend-length.patch
