--- a/series.conf
+++ b/series.conf
@@ -4669,7 +4669,7 @@
 	patches.suse/vfio-pci-demote-hiding-ecap-messages-to-debug-level
 	patches.suse/vfio-pci-Consolidate-irq-cleanup-on-MSI-MSI-X-disable
 	patches.suse/vfio-pci-Remove-negative-check-on-unsigned-vector
-	patches.suse/vfio-pci-Prepare-for-dynamic-interrupt-context-stora.patch
+	patches.suse/vfio-pci-Prepare-for-dynamic-interrupt-context-storage
 	patches.suse/vfio-pci-Move-to-single-error-path.patch
 	patches.suse/vfio-pci-Use-xarray-for-interrupt-context-storage.patch
 	patches.suse/vfio-pci-Remove-interrupt-context-counter.patch
