--- a/series.conf
+++ b/series.conf
@@ -4682,6 +4682,7 @@
 	patches.suse/vfio-pci-core-Add-capability-for-AtomicOp-completer-support
 	patches.suse/vfio-pci-Cleanup-Kconfig
 	patches.suse/vfio-platform-Cleanup-Kconfig
+	patches.suse/vfio-fsl-Create-Kconfig-sub-menu
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
 	patches.suse/crypto-ixp4xx-silence-uninitialized-variable-warning.patch
