vfio/pci: Probe and store ability to support dynamic MSI-X (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4675,7 +4675,7 @@
 	patches.suse/vfio-pci-Remove-interrupt-context-counter
 	patches.suse/vfio-pci-Update-stale-comment
 	patches.suse/vfio-pci-Use-bitfield-for-struct-vfio_pci_core_device-flags
-	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-.patch
+	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-MSI-X
 	patches.suse/vfio-pci-Support-dynamic-MSI-X.patch
 	patches.suse/vfio-pci-Clear-VFIO_IRQ_INFO_NORESIZE-for-MSI-X.patch
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
