--- a/series.conf
+++ b/series.conf
@@ -4666,6 +4666,7 @@
 	patches.suse/misc-pci_endpoint_test-Re-init-completion-for-e.patch
 	patches.suse/PCI-endpoint-functions-pci-epf-test-Fix-dma_cha.patch
 	patches.suse/PCI-endpoint-Add-missing-documentation-about-the-MSI.patch
+	patches.suse/vfio-pci-demote-hiding-ecap-messages-to-debug-level
 	patches.suse/vfio-pci-Consolidate-irq-cleanup-on-MSI-MSI-X-disabl.patch
 	patches.suse/vfio-pci-Remove-negative-check-on-unsigned-vector.patch
 	patches.suse/vfio-pci-Prepare-for-dynamic-interrupt-context-stora.patch
