--- a/series.conf
+++ b/series.conf
@@ -4680,6 +4680,7 @@
 	patches.suse/vfio-pci-Clear-VFIO_IRQ_INFO_NORESIZE-for-MSI-X
 	patches.suse/vfio-pci-Also-demote-hiding-standard-cap-messages
 	patches.suse/vfio-pci-core-Add-capability-for-AtomicOp-completer-support
+	patches.suse/vfio-pci-Cleanup-Kconfig
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
 	patches.suse/crypto-ixp4xx-silence-uninitialized-variable-warning.patch
