vfio/pci: Also demote hiding standard cap messages (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4678,6 +4678,7 @@
 	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-MSI-X
 	patches.suse/vfio-pci-Support-dynamic-MSI-X
 	patches.suse/vfio-pci-Clear-VFIO_IRQ_INFO_NORESIZE-for-MSI-X
+	patches.suse/vfio-pci-Also-demote-hiding-standard-cap-messages
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
 	patches.suse/crypto-ixp4xx-silence-uninitialized-variable-warning.patch
