--- a/series.conf
+++ b/series.conf
@@ -4676,7 +4676,7 @@
 	patches.suse/vfio-pci-Update-stale-comment
 	patches.suse/vfio-pci-Use-bitfield-for-struct-vfio_pci_core_device-flags
 	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-MSI-X
-	patches.suse/vfio-pci-Support-dynamic-MSI-X.patch
+	patches.suse/vfio-pci-Support-dynamic-MSI-X
 	patches.suse/vfio-pci-Clear-VFIO_IRQ_INFO_NORESIZE-for-MSI-X.patch
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
