vfio/pci: Consolidate irq cleanup on MSI/MSI-X disable (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4667,7 +4667,7 @@
 	patches.suse/PCI-endpoint-functions-pci-epf-test-Fix-dma_cha.patch
 	patches.suse/PCI-endpoint-Add-missing-documentation-about-the-MSI.patch
 	patches.suse/vfio-pci-demote-hiding-ecap-messages-to-debug-level
-	patches.suse/vfio-pci-Consolidate-irq-cleanup-on-MSI-MSI-X-disabl.patch
+	patches.suse/vfio-pci-Consolidate-irq-cleanup-on-MSI-MSI-X-disable
 	patches.suse/vfio-pci-Remove-negative-check-on-unsigned-vector.patch
 	patches.suse/vfio-pci-Prepare-for-dynamic-interrupt-context-stora.patch
 	patches.suse/vfio-pci-Move-to-single-error-path.patch
