vfio/pci: Remove interrupt context counter (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -4672,7 +4672,7 @@
 	patches.suse/vfio-pci-Prepare-for-dynamic-interrupt-context-storage
 	patches.suse/vfio-pci-Move-to-single-error-path
 	patches.suse/vfio-pci-Use-xarray-for-interrupt-context-storage
-	patches.suse/vfio-pci-Remove-interrupt-context-counter.patch
+	patches.suse/vfio-pci-Remove-interrupt-context-counter
 	patches.suse/vfio-pci-Update-stale-comment.patch
 	patches.suse/vfio-pci-Use-bitfield-for-struct-vfio_pci_core_devic.patch
 	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-.patch
