--- a/series.conf
+++ b/series.conf
@@ -4673,7 +4673,7 @@
 	patches.suse/vfio-pci-Move-to-single-error-path
 	patches.suse/vfio-pci-Use-xarray-for-interrupt-context-storage
 	patches.suse/vfio-pci-Remove-interrupt-context-counter
-	patches.suse/vfio-pci-Update-stale-comment.patch
+	patches.suse/vfio-pci-Update-stale-comment
 	patches.suse/vfio-pci-Use-bitfield-for-struct-vfio_pci_core_devic.patch
 	patches.suse/vfio-pci-Probe-and-store-ability-to-support-dynamic-.patch
 	patches.suse/vfio-pci-Support-dynamic-MSI-X.patch
