- vfio/platform: Cleanup Kconfig (jsc#PED-7779 jsc#PED-7780). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -4681,6 +4681,7 @@
 	patches.suse/vfio-pci-Also-demote-hiding-standard-cap-messages
 	patches.suse/vfio-pci-core-Add-capability-for-AtomicOp-completer-support
 	patches.suse/vfio-pci-Cleanup-Kconfig
+	patches.suse/vfio-platform-Cleanup-Kconfig
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
 	patches.suse/crypto-ixp4xx-silence-uninitialized-variable-warning.patch
