--- a/series.conf
+++ b/series.conf
@@ -4683,6 +4683,7 @@
 	patches.suse/vfio-pci-Cleanup-Kconfig
 	patches.suse/vfio-platform-Cleanup-Kconfig
 	patches.suse/vfio-fsl-Create-Kconfig-sub-menu
+	patches.suse/vfio-cdx-add-support-for-CDX-bus
 	patches.suse/vfio-mdev-Move-the-compat_class-initialization-.patch
 	patches.suse/xtensa-fix-NOMMU-build-with-lock_mm_and_find_vm.patch
 	patches.suse/crypto-ixp4xx-silence-uninitialized-variable-warning.patch
