vfio: Move vfio_device_group_unregister() to be the first operation in unregister (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9914,6 +9914,7 @@
 	patches.suse/vfio-iommufd-Add-detach_ioas-support-for-physical-VFIO-devices
 	patches.suse/iommufd-device-Add-iommufd_access_detach-API
 	patches.suse/vfio-iommufd-Add-detach_ioas-support-for-emulated-VFIO-devices
+	patches.suse/vfio-Move-vfio_device_group_unregister-to-be-the-first-operation
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
