--- a/series.conf
+++ b/series.conf
@@ -9925,6 +9925,7 @@
 	patches.suse/vfio-Move-the-IOMMU_CAP_CACHE_COHERENCY-check-in-__vfio_register
 	patches.suse/vfio-Compile-vfio_group-infrastructure-optionally
 	patches.suse/docs-vfio-Add-vfio-device-cdev-description
+	patches.suse/docs-vfio-Add-vfio-device-cdev-description-09467130
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
