--- a/series.conf
+++ b/series.conf
@@ -10404,6 +10404,7 @@
 	patches.suse/iommu-Prevent-RESV_DIRECT-devices-from-blocking-domains
 	patches.suse/iommu-vt-d-Remove-rmrr-check-in-domain-attaching-device-path
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
+	patches.suse/iommu-vt-d-Fix-to-convert-mm-pfn-to-dma-pfn
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
