--- a/series.conf
+++ b/series.conf
@@ -9926,6 +9926,7 @@
 	patches.suse/vfio-Compile-vfio_group-infrastructure-optionally
 	patches.suse/docs-vfio-Add-vfio-device-cdev-description
 	patches.suse/docs-vfio-Add-vfio-device-cdev-description-09467130
+	patches.suse/kvm-vfio-ensure-kvg-instance-stays-around-in-kvm_vfio_group_add
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
