--- a/series.conf
+++ b/series.conf
@@ -9934,6 +9934,7 @@
 	patches.suse/vfio-pds-register-with-the-pds_core-PF
 	patches.suse/vfio-pds-Add-VFIO-live-migration-support
 	patches.suse/vfio-pds-Add-support-for-dirty-page-tracking
+	patches.suse/vfio-pds-Add-support-for-firmware-recovery
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
