iommu: Simplify the __iommu_group_remove_device() flow (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10420,6 +10420,7 @@
 	patches.suse/iommu-Have-__iommu_probe_device-check-for-already-probed-devices
 	patches.suse/iommu-Use-iommu_group_ref_get-put-for-dev-iommu_group
 	patches.suse/iommu-Inline-iommu_group_get_for_dev-into-__iommu_probe_device
+	patches.suse/iommu-Simplify-the-__iommu_group_remove_device-flow
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
