--- a/series.conf
+++ b/series.conf
@@ -9930,6 +9930,7 @@
 	patches.suse/kvm-vfio-avoid-bouncing-the-mutex-when-adding-and-deleting-group
 	patches.suse/vfio-Commonize-combine_ranges-for-use-in-other-VFIO-drivers
 	patches.suse/vfio-pds-Initial-support-for-pds-VFIO-driver
+	patches.suse/pds_core-Require-callers-of-register-unregister-to-pass-PF-drvda
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
