iommu/amd: Generalize log overflow handling (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10408,6 +10408,7 @@
 	patches.suse/iommu-vt-d-Remove-unused-extern-declaration-dmar_parse_dev_scope
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-amd-iommu_v2-Clear-pasid-state-in-free-path
+	patches.suse/iommu-amd-Generalize-log-overflow-handling
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
