iommu/amd: Refactor IOMMU interrupt handling logic for Event, PPR, and GA logs (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10410,6 +10410,7 @@
 	patches.suse/iommu-amd-iommu_v2-Clear-pasid-state-in-free-path
 	patches.suse/iommu-amd-Generalize-log-overflow-handling
 	patches.suse/iommu-amd-Handle-PPR-log-overflow
+	patches.suse/iommu-amd-Refactor-IOMMU-interrupt-handling-logic-for-Event-PPR-
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
