--- a/series.conf
+++ b/series.conf
@@ -10384,6 +10384,7 @@
 	patches.suse/iommu-qcom-Use-the-asid-read-from-device-tree-if-specified
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-qcom-Index-contexts-by-asid-number-to-allow-asid-0
+	patches.suse/iommu-qcom-Add-support-for-QSMMUv2-and-QSMMU-500-secured-context
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
