--- a/series.conf
+++ b/series.conf
@@ -9935,6 +9935,7 @@
 	patches.suse/vfio-pds-Add-VFIO-live-migration-support
 	patches.suse/vfio-pds-Add-support-for-dirty-page-tracking
 	patches.suse/vfio-pds-Add-support-for-firmware-recovery
+	patches.suse/vfio-pds-Add-Kconfig-and-documentation
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
