--- a/series.conf
+++ b/series.conf
@@ -10398,6 +10398,7 @@
 	patches.suse/iommu-vt-d-Add-domain_flush_pasid_iotlb
 	patches.suse/iommu-vt-d-Remove-pasid_mutex
 	patches.suse/iommu-vt-d-Make-prq-draining-code-generic
+	patches.suse/iommu-vt-d-Prepare-for-set_dev_pasid-callback
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
