--- a/series.conf
+++ b/series.conf
@@ -10418,6 +10418,7 @@
 	patches.suse/iommu-amd-Remove-unsued-extern-declaration-amd_iommu_init_hardwa
 	patches.suse/iommu-amd-Rearrange-DTE-bit-definations
 	patches.suse/iommu-Have-__iommu_probe_device-check-for-already-probed-devices
+	patches.suse/iommu-Use-iommu_group_ref_get-put-for-dev-iommu_group
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
