--- a/series.conf
+++ b/series.conf
@@ -10368,6 +10368,7 @@
 	patches.suse/RDMA-hfi1-Move-user-SDMA-system-memory-pinning-code-.patch
 	patches.suse/IB-hfi1-Reduce-printing-of-errors-during-driver-shut.patch
 	patches.suse/iommu-apple-dart-mark-apple_dart_pm_ops-static
+	patches.suse/dt-bindings-mediatek-mt8188-Add-binding-for-MM-INFRA-IOMMU
 	patches.suse/iommu-mediatek-Fix-two-IOMMU-share-pagetable-issue.patch
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
