iommufd: Keep track of each device's reserved regions instead of groups (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9947,6 +9947,7 @@
 	patches.suse/iommufd-Add-iommufd_group
 	patches.suse/iommufd-Replace-the-hwpt-devices-list-with-iommufd_group
 	patches.suse/iommu-Export-iommu_get_resv_regions
+	patches.suse/iommufd-Keep-track-of-each-device-s-reserved-regions-instead-of-
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
