iommu: rockchip: Allocate tables from all available memory for IOMMU v2 (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10378,6 +10378,7 @@
 	patches.suse/iommu-ipmmu-vmsa-Convert-to-read_poll_timeout_atomic
 	patches.suse/iommu-ipmmu-vmsa-Allow-PCIe-devices
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
+	patches.suse/iommu-rockchip-Allocate-tables-from-all-available-memory-for-IOM
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
