--- a/series.conf
+++ b/series.conf
@@ -9918,6 +9918,7 @@
 	patches.suse/vfio-Move-device_del-before-waiting-for-the-last-vfio_device-reg
 	patches.suse/vfio-Add-cdev-for-vfio_device
 	patches.suse/vfio-Test-kvm-pointer-in-_vfio_device_get_kvm_safe
+	patches.suse/iommufd-Add-iommufd_ctx_from_fd
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
