--- a/series.conf
+++ b/series.conf
@@ -11592,6 +11592,7 @@
 	patches.suse/modpost-add-missing-else-to-the-of-check.patch
 	patches.suse/iommu-mediatek-Fix-share-pgtable-for-iova-over-4GB
 	patches.suse/iommu-arm-smmu-v3-Avoid-constructing-invalid-range-commands
+	patches.suse/dt-bindings-arm-smmu-Fix-SDM630-clocks-description
 	patches.suse/iommu-arm-smmu-v3-Fix-soft-lockup-triggered-by-arm_smmu_mm_invalidate_range.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-calculation-of-idt-size.patch
 	patches.suse/ubi-Refuse-attaching-if-mtd-s-erasesize-is-0.patch
