--- a/series.conf
+++ b/series.conf
@@ -9976,6 +9976,7 @@
 	patches.suse/iommufd-Add-IOMMU_GET_HW_INFO
 	patches.suse/iommufd-selftest-Add-coverage-for-IOMMU_GET_HW_INFO-ioctl
 	patches.suse/iommu-vt-d-Implement-hw_info-for-iommu-capability-query
+	patches.suse/iommufd-selftest-Don-t-leak-the-platform-device-memory-when-unlo
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
