iommu: Avoid unnecessary cache invalidations (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -12138,6 +12138,7 @@
 	patches.suse/1371-drm-i915-mcr-Hold-GT-forcewake-during-steering-opera.patch
 	patches.suse/1372-drm-i915-pmu-Check-if-pmu-is-closed-before-stopping-.patch
 	patches.suse/1373-drm-amd-Disable-ASPM-for-VI-w-all-Intel-systems.patch
+	patches.suse/iommu-Avoid-unnecessary-cache-invalidations
 	patches.suse/platform-x86-Add-s2idle-quirk-for-more-Lenovo-laptop.patch
 	patches.suse/scsi-sd-Introduce-manage_shutdown-device-flag.patch
 	patches.suse/blk-throttle-check-for-overflow-in-calculate_bytes_a.patch
