iommu/amd: Disable PPR log/interrupt in iommu_disable() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10412,6 +10412,7 @@
 	patches.suse/iommu-amd-Handle-PPR-log-overflow
 	patches.suse/iommu-amd-Refactor-IOMMU-interrupt-handling-logic-for-Event-PPR-
 	patches.suse/iommu-amd-Enable-separate-interrupt-for-PPR-and-GA-log
+	patches.suse/iommu-amd-Disable-PPR-log-interrupt-in-iommu_disable
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
