iommufd: Move putting a hwpt to a helper function (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9950,6 +9950,7 @@
 	patches.suse/iommufd-Keep-track-of-each-device-s-reserved-regions-instead-of-
 	patches.suse/iommufd-Use-the-iommufd_group-to-avoid-duplicate-MSI-setup
 	patches.suse/iommufd-Make-sw_msi_start-a-group-global
+	patches.suse/iommufd-Move-putting-a-hwpt-to-a-helper-function
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
