iommu/qcom: Use the asid read from device-tree if specified (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10381,6 +10381,7 @@
 	patches.suse/iommu-rockchip-Allocate-tables-from-all-available-memory-for-IOM
 	patches.suse/iommu-arm-smmu-v3-Change-vmid-alloc-strategy-from-bitmap-to-ida
 	patches.suse/iommu-arm-smmu-Clean-up-resource-handling-during-Qualcomm-contex
+	patches.suse/iommu-qcom-Use-the-asid-read-from-device-tree-if-specified
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
