vfio/pci: Extend VFIO_DEVICE_GET_PCI_HOT_RESET_INFO for vfio device cdev (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9896,6 +9896,7 @@
 	patches.suse/iommufd-Add-helper-to-retrieve-iommufd_ctx-and-devid
 	patches.suse/vfio-Mark-cdev-usage-in-vfio_device
 	patches.suse/vfio-Add-helper-to-search-vfio_device-in-a-dev_set
+	patches.suse/vfio-pci-Extend-VFIO_DEVICE_GET_PCI_HOT_RESET_INFO-for-vfio-devi
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
