iommufd: Add iommufd_access_replace() API (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9966,6 +9966,7 @@
 	patches.suse/iommufd-Allow-passing-in-iopt_access_list_id-to-iopt_remove_acce
 	patches.suse/iommufd-Add-iommufd_access_change_ioas-_id-helpers
 	patches.suse/iommufd-Use-iommufd_access_change_ioas-in-iommufd_access_destroy
+	patches.suse/iommufd-Add-iommufd_access_replace-API
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
