iommu/vt-d: Remove pasid_mutex (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10396,6 +10396,7 @@
 	patches.suse/iommu-Generalize-PASID-0-for-normal-DMA-w-o-PASID
 	patches.suse/iommu-Move-global-PASID-allocation-from-SVA-to-core
 	patches.suse/iommu-vt-d-Add-domain_flush_pasid_iotlb
+	patches.suse/iommu-vt-d-Remove-pasid_mutex
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
