iommu: Generalize PASID 0 for normal DMA w/o PASID (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10393,6 +10393,7 @@
 	patches.suse/dt-bindings-iommu-qcom-iommu-Add-QSMMUv2-and-MSM8976-compatibles
 	patches.suse/dt-bindings-arm-smmu-Fix-MSM8998-clocks-description
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
+	patches.suse/iommu-Generalize-PASID-0-for-normal-DMA-w-o-PASID
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
