iommu: Optimise PCI SAC address trick (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10427,6 +10427,7 @@
 	patches.suse/iommu-Always-destroy-the-iommu_group-during-iommu_release_device
 	patches.suse/iommu-Split-iommu_group_add_device
 	patches.suse/iommu-Avoid-locking-unlocking-for-iommu_probe_device
+	patches.suse/iommu-Optimise-PCI-SAC-address-trick
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
