iommu/ipmmu-vmsa: Convert to read_poll_timeout_atomic() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10375,6 +10375,7 @@
 	patches.suse/iommu-mediatek-Add-MT8188-IOMMU-Support
 	patches.suse/iommu-mediatek-mt8188-Add-iova_region_larb_msk
 	patches.suse/MAINTAINERS-iommu-mediatek-Update-the-header-file-name
+	patches.suse/iommu-ipmmu-vmsa-Convert-to-read_poll_timeout_atomic
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
