iommu: Split iommu_group_add_device() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10425,6 +10425,7 @@
 	patches.suse/iommu-Move-the-iommu-driver-sysfs-setup-into-iommu_init-deinit_d
 	patches.suse/iommu-Do-not-export-iommu_device_link-unlink
 	patches.suse/iommu-Always-destroy-the-iommu_group-during-iommu_release_device
+	patches.suse/iommu-Split-iommu_group_add_device
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
