vfio/pci: Allow passing zero-length fd array in VFIO_DEVICE_PCI_HOT_RESET (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9898,6 +9898,7 @@
 	patches.suse/vfio-Add-helper-to-search-vfio_device-in-a-dev_set
 	patches.suse/vfio-pci-Extend-VFIO_DEVICE_GET_PCI_HOT_RESET_INFO-for-vfio-devi
 	patches.suse/vfio-pci-Copy-hot-reset-device-info-to-userspace-in-the-devices-
+	patches.suse/vfio-pci-Allow-passing-zero-length-fd-array-in-VFIO_DEVICE_PCI_H
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
