iommu: Move the iommu driver sysfs setup into iommu_init/deinit_device() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10422,6 +10422,7 @@
 	patches.suse/iommu-Inline-iommu_group_get_for_dev-into-__iommu_probe_device
 	patches.suse/iommu-Simplify-the-__iommu_group_remove_device-flow
 	patches.suse/iommu-Add-iommu_init-deinit_device-paired-functions
+	patches.suse/iommu-Move-the-iommu-driver-sysfs-setup-into-iommu_init-deinit_d
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
