iommu/amd: Enable PPR/GA interrupt after interrupt handler setup (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10414,6 +10414,7 @@
 	patches.suse/iommu-amd-Enable-separate-interrupt-for-PPR-and-GA-log
 	patches.suse/iommu-amd-Disable-PPR-log-interrupt-in-iommu_disable
 	patches.suse/iommu-amd-Consolidate-PPR-log-enablement
+	patches.suse/iommu-amd-Enable-PPR-GA-interrupt-after-interrupt-handler-setup
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
 	patches.suse/tick-rcu-Fix-false-positive-softirq-work-is-pending-messages.patch
