vfio: Support IO page table replacement (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -9968,6 +9968,7 @@
 	patches.suse/iommufd-Use-iommufd_access_change_ioas-in-iommufd_access_destroy
 	patches.suse/iommufd-Add-iommufd_access_replace-API
 	patches.suse/iommufd-selftest-Add-IOMMU_TEST_OP_ACCESS_REPLACE_IOAS-coverage
+	patches.suse/vfio-Support-IO-page-table-replacement
 	patches.suse/nvdimm-Use-kstrtobool-instead-of-strtobool-44f2.patch
 	patches.suse/virtio_pmem-add-the-missing-REQ_OP_WRITE-for-flush-b.patch
 	patches.suse/nvdimm-Explicitly-include-correct-DT-includes-fd77.patch
