iommu/vt-d: Remove unused extern declaration dmar_parse_dev_scope() (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10405,6 +10405,7 @@
 	patches.suse/iommu-vt-d-Remove-rmrr-check-in-domain-attaching-device-path
 	patches.suse/iommu-vt-d-Fix-to-flush-cache-of-PASID-directory-tab.patch
 	patches.suse/iommu-vt-d-Fix-to-convert-mm-pfn-to-dma-pfn
+	patches.suse/iommu-vt-d-Remove-unused-extern-declaration-dmar_parse_dev_scope
 	patches.suse/iommu-amd-iommu_v2-Fix-pasid_state-refcount-dec-hit-.patch
 	patches.suse/iommu-Remove-kernel-doc-warnings.patch
 	patches.suse/1199-fbdev-g364fb-fix-build-failure-with-mips.patch
