iommu/mediatek: Add MT8188 IOMMU Support (jsc#PED-7779 jsc#PED-7780).

--- a/series.conf
+++ b/series.conf
@@ -10372,6 +10372,7 @@
 	patches.suse/iommu-mediatek-Fix-two-IOMMU-share-pagetable-issue.patch
 	patches.suse/iommu-mediatek-Adjust-mtk_iommu_config-flow
 	patches.suse/iommu-mediatek-Add-enable-IOMMU-SMC-command-for-INFRA-masters
+	patches.suse/iommu-mediatek-Add-MT8188-IOMMU-Support
 	patches.suse/iommu-rockchip-Fix-directory-table-address-encoding.patch
 	patches.suse/iommu-qcom-Disable-and-reset-context-bank-before-pro.patch
 	patches.suse/iommu-sprd-Add-missing-force_aperture.patch
