maple_tree: update mas_preallocate() testing (bsc#1219404).

--- a/series.conf
+++ b/series.conf
@@ -8199,6 +8199,7 @@
 	patches.suse/maple_tree-re-introduce-entry-to-mas_preallocate-arg.patch
 	patches.suse/maple_tree-adjust-node-allocation-on-mas_rebalance.patch
 	patches.suse/maple_tree-move-mas_wr_end_piv-below-mas_wr_extend_n.patch
+	patches.suse/maple_tree-update-mas_preallocate-testing.patch
 	patches.suse/maple_tree-refine-mas_preallocate-node-calculations.patch
 	patches.suse/maple_tree-reduce-resets-during-store-setup.patch
 	patches.suse/mm-hugepage-pud-allow-arch-specific-helper-function--348a.patch
